// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pie Chart renders 1`] = `
<div
  className="w-full flex flex-row gap-36"
>
  <div
    className="sc-frlyyo iIGheG"
    style={
      Object {
        "height": 446,
      }
    }
  >
    <div
      className="sc-cuQNSp DfkOb"
    >
      <button
        className="sc-hwByLP gBJgoo"
        onClick={[Function]}
      >
        <svg
          className="sc-dmRaPn sc-jwYuju  dTsTrl"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.556 6.068a.5.5 0 00-.503.864l.503-.864zM16 8.652l.417.276a.5.5 0 00-.165-.708L16 8.652zm-2.634 3.065a.5.5 0 00.833.553l-.833-.553zm8.695-1.238a.5.5 0 00-.67.742l.67-.742zM12.053 6.932l3.695 2.152.504-.864-3.696-2.152-.503.864zm3.53 1.444l-2.217 3.341.833.553 2.218-3.342-.834-.552zm8.417 8.7C24 21.448 20.422 25 16 25v1c4.966 0 9-3.991 9-8.924h-1zM16 25c-4.422 0-8-3.552-8-7.924H7C7 22.009 11.034 26 16 26v-1zm-8-7.924c0-4.372 3.578-7.924 8-7.924v-1c-4.966 0-9 3.991-9 8.924h1zm13.39-5.855A7.868 7.868 0 0124 17.076h1a8.869 8.869 0 00-2.94-6.597l-.67.742z"
            fill="currentColor"
          />
        </svg>
      </button>
      <div />
      <button
        className="sc-hwByLP gBJgoo"
        onClick={[Function]}
      >
        <svg
          className="sc-gUAEMC"
          fill="none"
          fontSize="1.375rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 6.5v14.616m0 0l-4.385-4.385M16 21.115l4.385-4.384M6.5 18.923v3.654A2.923 2.923 0 009.423 25.5h13.154a2.923 2.923 0 002.923-2.923v-3.654"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
      <button
        className="sc-hwByLP gBJgoo"
        onClick={[Function]}
      >
        <svg
          className="sc-jfmDQi"
          fill="none"
          fontSize="1.375rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.5 12.832V6.5h6.334m-6.33 0l18.998 19m-6.334-.005H25.5v-6.332m0-6.331V6.5h-6.334m6.33 0L6.5 25.5m6.334-.005H6.501v-6.332"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-knTjpY dzNHwr"
    >
      <div
        className="sc-hNDnKS iDIiac"
      >
        <svg
          fill="none"
          height="40"
          viewBox="0 0 40 40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.308 30.216h7.385v5.538h-7.385z"
            fill="url(#Devices_svg__paint0_linear)"
          />
          <path
            d="M32.462 30.215H7.538C4.492 30.215 2 27.723 2 24.677V9.538C2 6.492 4.492 4 7.538 4h24.924C35.508 4 38 6.492 38 9.538v15.139c0 3.046-2.492 5.538-5.538 5.538z"
            fill="url(#Devices_svg__paint1_linear)"
          />
          <path
            d="M31.723 27.77H8.277a3.92 3.92 0 01-3.923-3.923V10.462A3.92 3.92 0 018.277 6.54h23.446a3.92 3.92 0 013.923 3.923v13.385c.046 2.123-1.754 3.923-3.923 3.923z"
            fill="url(#Devices_svg__paint2_linear)"
          />
          <path
            d="M8.83 13.875a2.676 2.676 0 100-5.352 2.676 2.676 0 000 5.352z"
            fill="url(#Devices_svg__paint3_linear)"
          />
          <path
            d="M26.57 35.754H13.43a.814.814 0 01-.815-.826v-.194c0-.437.336-.826.815-.826h13.14c.43 0 .814.34.814.826v.194c0 .438-.383.826-.815.826z"
            fill="url(#Devices_svg__paint4_linear)"
          />
          <path
            d="M37.954 22.462v10.846a2.314 2.314 0 01-2.308 2.308H32a2.314 2.314 0 01-2.308-2.308V22.462A2.314 2.314 0 0132 20.154h3.646a2.314 2.314 0 012.308 2.308z"
            fill="url(#Devices_svg__paint5_linear)"
          />
          <path
            d="M37.123 22.462v10.8c0 .877-.693 1.569-1.57 1.569h-3.461c-.877 0-1.57-.692-1.57-1.57v-10.8c0-.876.693-1.568 1.57-1.568h3.462c.876 0 1.569.692 1.569 1.569z"
            fill="url(#Devices_svg__paint6_linear)"
          />
          <path
            d="M34.723 22.692h-1.8a.315.315 0 01-.323-.323c0-.185.138-.323.323-.323h1.8c.184 0 .323.138.323.323-.046.185-.185.323-.323.323z"
            fill="url(#Devices_svg__paint7_linear)"
          />
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint0_linear"
              x1={6.422}
              x2={25.175}
              y1={23.695}
              y2={33.809}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint1_linear"
              x1={-46.194}
              x2={43.995}
              y1={-26.866}
              y2={23.229}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint2_linear"
              x1={-0.833}
              x2={3.434}
              y1={0.227}
              y2={37.864}
            >
              <stop
                stopColor="#F1F4FC"
              />
              <stop
                offset={0.333}
                stopColor="#F3F6FD"
                stopOpacity={0.7}
              />
              <stop
                offset={0.635}
                stopColor="#F1F4FC"
                stopOpacity={0.6}
              />
              <stop
                offset={1}
                stopColor="#F2F5FD"
                stopOpacity={0.1}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint3_linear"
              x1={7.007}
              x2={11.924}
              y1={12.045}
              y2={12.068}
            >
              <stop
                stopColor="#FFD60A"
              />
              <stop
                offset={1}
                stopColor="#FFD60A"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint4_linear"
              x1={-7.156}
              x2={-2.936}
              y1={31.735}
              y2={45.392}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint5_linear"
              x1={18.633}
              x2={44.507}
              y1={1.95}
              y2={7.542}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint6_linear"
              x1={29.429}
              x2={37.283}
              y1={16.748}
              y2={39.004}
            >
              <stop
                stopColor="#F1F4FC"
              />
              <stop
                offset={0.333}
                stopColor="#F3F6FD"
                stopOpacity={0.7}
              />
              <stop
                offset={0.635}
                stopColor="#F1F4FC"
                stopOpacity={0.6}
              />
              <stop
                offset={1}
                stopColor="#F2F5FD"
                stopOpacity={0.1}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint7_linear"
              x1={32.99}
              x2={35.237}
              y1={22.471}
              y2={22.511}
            >
              <stop
                stopColor="#FFD60A"
              />
              <stop
                offset={1}
                stopColor="#FFD60A"
                stopOpacity={0}
              />
            </linearGradient>
          </defs>
        </svg>
      </div>
      <p
        className="sc-jveewi sc-kHMNun fZDfgK bdwyJJ"
        size={20}
      >
        Device Breakdown
      </p>
      <div
        className="sc-bSGZAx"
      >
        <div
          className="sc-iUjRoI cIQnic"
        >
          <button
            className="sc-cmYlSf bNnIPo"
            onClick={[Function]}
          >
            <p
              className="sc-jveewi sc-fjsWye dbvQYG bwzZQJ"
              size={14}
            >
              by GGR
            </p>
            <svg
              className="sc-efBctP"
              fill="none"
              fontSize="1.4375rem"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      className="recharts-responsive-container sc-iCxJSg clvQwJ"
      style={
        Object {
          "height": "100%",
          "maxHeight": undefined,
          "minHeight": undefined,
          "minWidth": undefined,
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="sc-frlyyo iIGheG"
    style={
      Object {
        "height": 446,
      }
    }
  >
    <div
      className="sc-cuQNSp DfkOb"
    >
      <button
        className="sc-hwByLP gBJgoo"
        onClick={[Function]}
      >
        <svg
          className="sc-dmRaPn sc-jwYuju  dTsTrl"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.556 6.068a.5.5 0 00-.503.864l.503-.864zM16 8.652l.417.276a.5.5 0 00-.165-.708L16 8.652zm-2.634 3.065a.5.5 0 00.833.553l-.833-.553zm8.695-1.238a.5.5 0 00-.67.742l.67-.742zM12.053 6.932l3.695 2.152.504-.864-3.696-2.152-.503.864zm3.53 1.444l-2.217 3.341.833.553 2.218-3.342-.834-.552zm8.417 8.7C24 21.448 20.422 25 16 25v1c4.966 0 9-3.991 9-8.924h-1zM16 25c-4.422 0-8-3.552-8-7.924H7C7 22.009 11.034 26 16 26v-1zm-8-7.924c0-4.372 3.578-7.924 8-7.924v-1c-4.966 0-9 3.991-9 8.924h1zm13.39-5.855A7.868 7.868 0 0124 17.076h1a8.869 8.869 0 00-2.94-6.597l-.67.742z"
            fill="currentColor"
          />
        </svg>
      </button>
      <div />
      <button
        className="sc-hwByLP gBJgoo"
        onClick={[Function]}
      >
        <svg
          className="sc-gUAEMC"
          fill="none"
          fontSize="1.375rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 6.5v14.616m0 0l-4.385-4.385M16 21.115l4.385-4.384M6.5 18.923v3.654A2.923 2.923 0 009.423 25.5h13.154a2.923 2.923 0 002.923-2.923v-3.654"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
      <button
        className="sc-hwByLP gBJgoo"
        onClick={[Function]}
      >
        <svg
          className="sc-jfmDQi"
          fill="none"
          fontSize="1.375rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.5 12.832V6.5h6.334m-6.33 0l18.998 19m-6.334-.005H25.5v-6.332m0-6.331V6.5h-6.334m6.33 0L6.5 25.5m6.334-.005H6.501v-6.332"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-knTjpY dzNHwr"
    >
      <div
        className="sc-hNDnKS iDIiac"
      >
        <svg
          fill="none"
          height="40"
          viewBox="0 0 40 40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.308 30.216h7.385v5.538h-7.385z"
            fill="url(#Devices_svg__paint0_linear)"
          />
          <path
            d="M32.462 30.215H7.538C4.492 30.215 2 27.723 2 24.677V9.538C2 6.492 4.492 4 7.538 4h24.924C35.508 4 38 6.492 38 9.538v15.139c0 3.046-2.492 5.538-5.538 5.538z"
            fill="url(#Devices_svg__paint1_linear)"
          />
          <path
            d="M31.723 27.77H8.277a3.92 3.92 0 01-3.923-3.923V10.462A3.92 3.92 0 018.277 6.54h23.446a3.92 3.92 0 013.923 3.923v13.385c.046 2.123-1.754 3.923-3.923 3.923z"
            fill="url(#Devices_svg__paint2_linear)"
          />
          <path
            d="M8.83 13.875a2.676 2.676 0 100-5.352 2.676 2.676 0 000 5.352z"
            fill="url(#Devices_svg__paint3_linear)"
          />
          <path
            d="M26.57 35.754H13.43a.814.814 0 01-.815-.826v-.194c0-.437.336-.826.815-.826h13.14c.43 0 .814.34.814.826v.194c0 .438-.383.826-.815.826z"
            fill="url(#Devices_svg__paint4_linear)"
          />
          <path
            d="M37.954 22.462v10.846a2.314 2.314 0 01-2.308 2.308H32a2.314 2.314 0 01-2.308-2.308V22.462A2.314 2.314 0 0132 20.154h3.646a2.314 2.314 0 012.308 2.308z"
            fill="url(#Devices_svg__paint5_linear)"
          />
          <path
            d="M37.123 22.462v10.8c0 .877-.693 1.569-1.57 1.569h-3.461c-.877 0-1.57-.692-1.57-1.57v-10.8c0-.876.693-1.568 1.57-1.568h3.462c.876 0 1.569.692 1.569 1.569z"
            fill="url(#Devices_svg__paint6_linear)"
          />
          <path
            d="M34.723 22.692h-1.8a.315.315 0 01-.323-.323c0-.185.138-.323.323-.323h1.8c.184 0 .323.138.323.323-.046.185-.185.323-.323.323z"
            fill="url(#Devices_svg__paint7_linear)"
          />
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint0_linear"
              x1={6.422}
              x2={25.175}
              y1={23.695}
              y2={33.809}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint1_linear"
              x1={-46.194}
              x2={43.995}
              y1={-26.866}
              y2={23.229}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint2_linear"
              x1={-0.833}
              x2={3.434}
              y1={0.227}
              y2={37.864}
            >
              <stop
                stopColor="#F1F4FC"
              />
              <stop
                offset={0.333}
                stopColor="#F3F6FD"
                stopOpacity={0.7}
              />
              <stop
                offset={0.635}
                stopColor="#F1F4FC"
                stopOpacity={0.6}
              />
              <stop
                offset={1}
                stopColor="#F2F5FD"
                stopOpacity={0.1}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint3_linear"
              x1={7.007}
              x2={11.924}
              y1={12.045}
              y2={12.068}
            >
              <stop
                stopColor="#FFD60A"
              />
              <stop
                offset={1}
                stopColor="#FFD60A"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint4_linear"
              x1={-7.156}
              x2={-2.936}
              y1={31.735}
              y2={45.392}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint5_linear"
              x1={18.633}
              x2={44.507}
              y1={1.95}
              y2={7.542}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint6_linear"
              x1={29.429}
              x2={37.283}
              y1={16.748}
              y2={39.004}
            >
              <stop
                stopColor="#F1F4FC"
              />
              <stop
                offset={0.333}
                stopColor="#F3F6FD"
                stopOpacity={0.7}
              />
              <stop
                offset={0.635}
                stopColor="#F1F4FC"
                stopOpacity={0.6}
              />
              <stop
                offset={1}
                stopColor="#F2F5FD"
                stopOpacity={0.1}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint7_linear"
              x1={32.99}
              x2={35.237}
              y1={22.471}
              y2={22.511}
            >
              <stop
                stopColor="#FFD60A"
              />
              <stop
                offset={1}
                stopColor="#FFD60A"
                stopOpacity={0}
              />
            </linearGradient>
          </defs>
        </svg>
      </div>
      <p
        className="sc-jveewi sc-kHMNun fZDfgK bdwyJJ"
        size={20}
      >
        Device Breakdown
      </p>
      <div
        className="sc-bSGZAx"
      >
        <div
          className="sc-iUjRoI cIQnic"
        >
          <button
            className="sc-cmYlSf bNnIPo"
            onClick={[Function]}
          >
            <p
              className="sc-jveewi sc-fjsWye dbvQYG bwzZQJ"
              size={14}
            >
              by GGR
            </p>
            <svg
              className="sc-efBctP"
              fill="none"
              fontSize="1.4375rem"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      className="recharts-responsive-container sc-iCxJSg clvQwJ"
      style={
        Object {
          "height": "100%",
          "maxHeight": undefined,
          "minHeight": undefined,
          "minWidth": undefined,
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`Pie Chart renders Loading 1`] = `
<div
  className="w-full flex flex-row gap-36"
>
  <div
    className="sc-frlyyo iIGheG"
    style={
      Object {
        "height": 446,
      }
    }
  >
    <div
      className="sc-cuQNSp DfkOb"
    >
      <button
        className="sc-hwByLP gBJgoo"
        onClick={[Function]}
      >
        <svg
          className="sc-dmRaPn sc-jwYuju  dTsTrl"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.556 6.068a.5.5 0 00-.503.864l.503-.864zM16 8.652l.417.276a.5.5 0 00-.165-.708L16 8.652zm-2.634 3.065a.5.5 0 00.833.553l-.833-.553zm8.695-1.238a.5.5 0 00-.67.742l.67-.742zM12.053 6.932l3.695 2.152.504-.864-3.696-2.152-.503.864zm3.53 1.444l-2.217 3.341.833.553 2.218-3.342-.834-.552zm8.417 8.7C24 21.448 20.422 25 16 25v1c4.966 0 9-3.991 9-8.924h-1zM16 25c-4.422 0-8-3.552-8-7.924H7C7 22.009 11.034 26 16 26v-1zm-8-7.924c0-4.372 3.578-7.924 8-7.924v-1c-4.966 0-9 3.991-9 8.924h1zm13.39-5.855A7.868 7.868 0 0124 17.076h1a8.869 8.869 0 00-2.94-6.597l-.67.742z"
            fill="currentColor"
          />
        </svg>
      </button>
      <div />
      <button
        className="sc-hwByLP gBJgoo"
        onClick={[Function]}
      >
        <svg
          className="sc-gUAEMC"
          fill="none"
          fontSize="1.375rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 6.5v14.616m0 0l-4.385-4.385M16 21.115l4.385-4.384M6.5 18.923v3.654A2.923 2.923 0 009.423 25.5h13.154a2.923 2.923 0 002.923-2.923v-3.654"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
      <button
        className="sc-hwByLP gBJgoo"
        onClick={[Function]}
      >
        <svg
          className="sc-jfmDQi"
          fill="none"
          fontSize="1.375rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.5 12.832V6.5h6.334m-6.33 0l18.998 19m-6.334-.005H25.5v-6.332m0-6.331V6.5h-6.334m6.33 0L6.5 25.5m6.334-.005H6.501v-6.332"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-knTjpY dzNHwr"
    >
      <div
        className="sc-hNDnKS iDIiac"
      >
        <svg
          fill="none"
          height="40"
          viewBox="0 0 40 40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.308 30.216h7.385v5.538h-7.385z"
            fill="url(#Devices_svg__paint0_linear)"
          />
          <path
            d="M32.462 30.215H7.538C4.492 30.215 2 27.723 2 24.677V9.538C2 6.492 4.492 4 7.538 4h24.924C35.508 4 38 6.492 38 9.538v15.139c0 3.046-2.492 5.538-5.538 5.538z"
            fill="url(#Devices_svg__paint1_linear)"
          />
          <path
            d="M31.723 27.77H8.277a3.92 3.92 0 01-3.923-3.923V10.462A3.92 3.92 0 018.277 6.54h23.446a3.92 3.92 0 013.923 3.923v13.385c.046 2.123-1.754 3.923-3.923 3.923z"
            fill="url(#Devices_svg__paint2_linear)"
          />
          <path
            d="M8.83 13.875a2.676 2.676 0 100-5.352 2.676 2.676 0 000 5.352z"
            fill="url(#Devices_svg__paint3_linear)"
          />
          <path
            d="M26.57 35.754H13.43a.814.814 0 01-.815-.826v-.194c0-.437.336-.826.815-.826h13.14c.43 0 .814.34.814.826v.194c0 .438-.383.826-.815.826z"
            fill="url(#Devices_svg__paint4_linear)"
          />
          <path
            d="M37.954 22.462v10.846a2.314 2.314 0 01-2.308 2.308H32a2.314 2.314 0 01-2.308-2.308V22.462A2.314 2.314 0 0132 20.154h3.646a2.314 2.314 0 012.308 2.308z"
            fill="url(#Devices_svg__paint5_linear)"
          />
          <path
            d="M37.123 22.462v10.8c0 .877-.693 1.569-1.57 1.569h-3.461c-.877 0-1.57-.692-1.57-1.57v-10.8c0-.876.693-1.568 1.57-1.568h3.462c.876 0 1.569.692 1.569 1.569z"
            fill="url(#Devices_svg__paint6_linear)"
          />
          <path
            d="M34.723 22.692h-1.8a.315.315 0 01-.323-.323c0-.185.138-.323.323-.323h1.8c.184 0 .323.138.323.323-.046.185-.185.323-.323.323z"
            fill="url(#Devices_svg__paint7_linear)"
          />
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint0_linear"
              x1={6.422}
              x2={25.175}
              y1={23.695}
              y2={33.809}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint1_linear"
              x1={-46.194}
              x2={43.995}
              y1={-26.866}
              y2={23.229}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint2_linear"
              x1={-0.833}
              x2={3.434}
              y1={0.227}
              y2={37.864}
            >
              <stop
                stopColor="#F1F4FC"
              />
              <stop
                offset={0.333}
                stopColor="#F3F6FD"
                stopOpacity={0.7}
              />
              <stop
                offset={0.635}
                stopColor="#F1F4FC"
                stopOpacity={0.6}
              />
              <stop
                offset={1}
                stopColor="#F2F5FD"
                stopOpacity={0.1}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint3_linear"
              x1={7.007}
              x2={11.924}
              y1={12.045}
              y2={12.068}
            >
              <stop
                stopColor="#FFD60A"
              />
              <stop
                offset={1}
                stopColor="#FFD60A"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint4_linear"
              x1={-7.156}
              x2={-2.936}
              y1={31.735}
              y2={45.392}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint5_linear"
              x1={18.633}
              x2={44.507}
              y1={1.95}
              y2={7.542}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint6_linear"
              x1={29.429}
              x2={37.283}
              y1={16.748}
              y2={39.004}
            >
              <stop
                stopColor="#F1F4FC"
              />
              <stop
                offset={0.333}
                stopColor="#F3F6FD"
                stopOpacity={0.7}
              />
              <stop
                offset={0.635}
                stopColor="#F1F4FC"
                stopOpacity={0.6}
              />
              <stop
                offset={1}
                stopColor="#F2F5FD"
                stopOpacity={0.1}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint7_linear"
              x1={32.99}
              x2={35.237}
              y1={22.471}
              y2={22.511}
            >
              <stop
                stopColor="#FFD60A"
              />
              <stop
                offset={1}
                stopColor="#FFD60A"
                stopOpacity={0}
              />
            </linearGradient>
          </defs>
        </svg>
      </div>
      <p
        className="sc-jveewi sc-kHMNun fZDfgK bdwyJJ"
        size={20}
      >
        Device Breakdown
      </p>
      <div
        className="sc-bSGZAx"
      >
        <div
          className="sc-iUjRoI cIQnic"
        >
          <button
            className="sc-cmYlSf bNnIPo"
            onClick={[Function]}
          >
            <p
              className="sc-jveewi sc-fjsWye dbvQYG bwzZQJ"
              size={14}
            >
              by GGR
            </p>
            <svg
              className="sc-efBctP"
              fill="none"
              fontSize="1.4375rem"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      className="sc-gRFyCy hrvwA-d"
    >
      <svg
        fill="none"
        height="160"
        width="160"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M80 0a79.998 79.998 0 0175.959 105.105 80.005 80.005 0 01-29.372 39.931L80 80V0z"
          fill="#D8E0E3"
        />
        <path
          d="M126.587 145.036A79.996 79.996 0 01.341 72.618L80 80l46.587 65.036z"
          fill="#EAEEF0"
        />
        <path
          d="M.341 72.618A80 80 0 0180 0v80L.341 72.618z"
          fill="#F3F5F6"
        />
      </svg>
      <p
        className="sc-jveewi sc-jLOYlT bNVltx cJJDoz"
        color="trunks.100"
        size={14}
      >
        Loading...
      </p>
    </div>
  </div>
  <div
    className="sc-frlyyo iIGheG"
    style={
      Object {
        "height": 446,
      }
    }
  >
    <div
      className="sc-cuQNSp DfkOb"
    >
      <button
        className="sc-hwByLP gBJgoo"
        onClick={[Function]}
      >
        <svg
          className="sc-dmRaPn sc-jwYuju  dTsTrl"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.556 6.068a.5.5 0 00-.503.864l.503-.864zM16 8.652l.417.276a.5.5 0 00-.165-.708L16 8.652zm-2.634 3.065a.5.5 0 00.833.553l-.833-.553zm8.695-1.238a.5.5 0 00-.67.742l.67-.742zM12.053 6.932l3.695 2.152.504-.864-3.696-2.152-.503.864zm3.53 1.444l-2.217 3.341.833.553 2.218-3.342-.834-.552zm8.417 8.7C24 21.448 20.422 25 16 25v1c4.966 0 9-3.991 9-8.924h-1zM16 25c-4.422 0-8-3.552-8-7.924H7C7 22.009 11.034 26 16 26v-1zm-8-7.924c0-4.372 3.578-7.924 8-7.924v-1c-4.966 0-9 3.991-9 8.924h1zm13.39-5.855A7.868 7.868 0 0124 17.076h1a8.869 8.869 0 00-2.94-6.597l-.67.742z"
            fill="currentColor"
          />
        </svg>
      </button>
      <div />
      <button
        className="sc-hwByLP gBJgoo"
        onClick={[Function]}
      >
        <svg
          className="sc-gUAEMC"
          fill="none"
          fontSize="1.375rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 6.5v14.616m0 0l-4.385-4.385M16 21.115l4.385-4.384M6.5 18.923v3.654A2.923 2.923 0 009.423 25.5h13.154a2.923 2.923 0 002.923-2.923v-3.654"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
      <button
        className="sc-hwByLP gBJgoo"
        onClick={[Function]}
      >
        <svg
          className="sc-jfmDQi"
          fill="none"
          fontSize="1.375rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.5 12.832V6.5h6.334m-6.33 0l18.998 19m-6.334-.005H25.5v-6.332m0-6.331V6.5h-6.334m6.33 0L6.5 25.5m6.334-.005H6.501v-6.332"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-knTjpY dzNHwr"
    >
      <div
        className="sc-hNDnKS iDIiac"
      >
        <svg
          fill="none"
          height="40"
          viewBox="0 0 40 40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.308 30.216h7.385v5.538h-7.385z"
            fill="url(#Devices_svg__paint0_linear)"
          />
          <path
            d="M32.462 30.215H7.538C4.492 30.215 2 27.723 2 24.677V9.538C2 6.492 4.492 4 7.538 4h24.924C35.508 4 38 6.492 38 9.538v15.139c0 3.046-2.492 5.538-5.538 5.538z"
            fill="url(#Devices_svg__paint1_linear)"
          />
          <path
            d="M31.723 27.77H8.277a3.92 3.92 0 01-3.923-3.923V10.462A3.92 3.92 0 018.277 6.54h23.446a3.92 3.92 0 013.923 3.923v13.385c.046 2.123-1.754 3.923-3.923 3.923z"
            fill="url(#Devices_svg__paint2_linear)"
          />
          <path
            d="M8.83 13.875a2.676 2.676 0 100-5.352 2.676 2.676 0 000 5.352z"
            fill="url(#Devices_svg__paint3_linear)"
          />
          <path
            d="M26.57 35.754H13.43a.814.814 0 01-.815-.826v-.194c0-.437.336-.826.815-.826h13.14c.43 0 .814.34.814.826v.194c0 .438-.383.826-.815.826z"
            fill="url(#Devices_svg__paint4_linear)"
          />
          <path
            d="M37.954 22.462v10.846a2.314 2.314 0 01-2.308 2.308H32a2.314 2.314 0 01-2.308-2.308V22.462A2.314 2.314 0 0132 20.154h3.646a2.314 2.314 0 012.308 2.308z"
            fill="url(#Devices_svg__paint5_linear)"
          />
          <path
            d="M37.123 22.462v10.8c0 .877-.693 1.569-1.57 1.569h-3.461c-.877 0-1.57-.692-1.57-1.57v-10.8c0-.876.693-1.568 1.57-1.568h3.462c.876 0 1.569.692 1.569 1.569z"
            fill="url(#Devices_svg__paint6_linear)"
          />
          <path
            d="M34.723 22.692h-1.8a.315.315 0 01-.323-.323c0-.185.138-.323.323-.323h1.8c.184 0 .323.138.323.323-.046.185-.185.323-.323.323z"
            fill="url(#Devices_svg__paint7_linear)"
          />
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint0_linear"
              x1={6.422}
              x2={25.175}
              y1={23.695}
              y2={33.809}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint1_linear"
              x1={-46.194}
              x2={43.995}
              y1={-26.866}
              y2={23.229}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint2_linear"
              x1={-0.833}
              x2={3.434}
              y1={0.227}
              y2={37.864}
            >
              <stop
                stopColor="#F1F4FC"
              />
              <stop
                offset={0.333}
                stopColor="#F3F6FD"
                stopOpacity={0.7}
              />
              <stop
                offset={0.635}
                stopColor="#F1F4FC"
                stopOpacity={0.6}
              />
              <stop
                offset={1}
                stopColor="#F2F5FD"
                stopOpacity={0.1}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint3_linear"
              x1={7.007}
              x2={11.924}
              y1={12.045}
              y2={12.068}
            >
              <stop
                stopColor="#FFD60A"
              />
              <stop
                offset={1}
                stopColor="#FFD60A"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint4_linear"
              x1={-7.156}
              x2={-2.936}
              y1={31.735}
              y2={45.392}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint5_linear"
              x1={18.633}
              x2={44.507}
              y1={1.95}
              y2={7.542}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint6_linear"
              x1={29.429}
              x2={37.283}
              y1={16.748}
              y2={39.004}
            >
              <stop
                stopColor="#F1F4FC"
              />
              <stop
                offset={0.333}
                stopColor="#F3F6FD"
                stopOpacity={0.7}
              />
              <stop
                offset={0.635}
                stopColor="#F1F4FC"
                stopOpacity={0.6}
              />
              <stop
                offset={1}
                stopColor="#F2F5FD"
                stopOpacity={0.1}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Devices_svg__paint7_linear"
              x1={32.99}
              x2={35.237}
              y1={22.471}
              y2={22.511}
            >
              <stop
                stopColor="#FFD60A"
              />
              <stop
                offset={1}
                stopColor="#FFD60A"
                stopOpacity={0}
              />
            </linearGradient>
          </defs>
        </svg>
      </div>
      <p
        className="sc-jveewi sc-kHMNun fZDfgK bdwyJJ"
        size={20}
      >
        Device Breakdown
      </p>
      <div
        className="sc-bSGZAx"
      >
        <div
          className="sc-iUjRoI cIQnic"
        >
          <button
            className="sc-cmYlSf bNnIPo"
            onClick={[Function]}
          >
            <p
              className="sc-jveewi sc-fjsWye dbvQYG bwzZQJ"
              size={14}
            >
              by GGR
            </p>
            <svg
              className="sc-efBctP"
              fill="none"
              fontSize="1.4375rem"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      className="recharts-responsive-container sc-iCxJSg clvQwJ"
      style={
        Object {
          "height": "100%",
          "maxHeight": undefined,
          "minHeight": undefined,
          "minWidth": undefined,
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;
